@@ -1,3 +1,9 @@
+2002-01-08  Mark McLoughlin  <mark@skynet.ie>
+
+	* backends/xml-dir.c:
+	(struct _Dir): kill unused subdir_cache.
+	(dir_sync): move incorrect assertion.
+
 2002-01-07  Mark McLoughlin  <mark@skynet.ie>
 
 	* gconf/gconf-database.c: (gconf_database_new):
